@@ -77,11 +77,10 @@ We are happily announcing that iTerm now integrates the support for Growl. You n
 <a href="http://www.growl.info">Growl</a> installed. Besides a few tab status related
 messages (you can choose which one you need from Growl's preference setting), iTerm now also
 supports an escape sequence that sends message via Growl: ESC ]9;string^G. <BR><BR>
-For example, if you would like to get an alert from a long make, do this under bash will help:<BR>
-<ul>make;  echo $'\e]9;make done\007'</ul><BR>
-Go to the  
-<A HREF="http://iterm.sourceforge.net/download.shtml">Download page</A> 
-and check out the nightly build.<BR><BR>
+For example, if you would like to get an alert after a long make, do this under bash will help:<BR><BR>
+make;  echo $'\e]9;make done\007'<BR><BR>
+Go to the <A HREF="http://iterm.sourceforge.net/download.shtml">Download page</A> 
+and check out the recent CVS build.<BR><BR>
 
 <STRONG>New Look</STRONG> 9/12/2006<BR>
 We are experimenting with a new tab control (PSMTabBarControl) that can mimic Safari-like tabs. Download the
